--- a/Sakura.com/Wiki/index.html
+++ b/Sakura.com/Wiki/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom class="logo">
+            <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom" class="logo">
             <h1>SAKURA.COM</h1>
         </div>
         <nav>
@@ -20,3 +20,14 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <h2>Sobre Sakura Card Captors</h2>
+        <section id="criadoras">
+            <h3>Criadoras</h3>
+            <p><strong>CLAMP</strong> é um grupo de mangakás japonês que criou Sakura Card Captors. O grupo é composto por quatro integrantes:<br> Satsuki Igarashi, Ageha Ohkawa, Tsubaki Nekoi e Mokona. Elas são conhecidas por criar várias obras populares e influentes no gênero shoujo e são muito respeitadas na indústria de mangás e animes.</p>
+            <ul>
+                <li><strong>Satsuki Igarashi</strong> - Design e ilustração.</li>
+                <li><strong>Ageha Ohkawa</strong> - Roteiro e enredo.</li>
+                <li><strong>Tsubaki Nekoi</strong> - Design e ilustração.</li>
+                <li><strong>Mokona</strong> - Design de personagens e elementos mágicos.</li>
+            </ul>
