--- a/Sakura.com/Produtos/index.html
+++ b/Sakura.com/Produtos/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom class="logo">
+            <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom" class="logo">
             <h1>SAKURA.COM</h1>
         </div>
         <nav>
