--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Inicial</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/estilo.css">
 </head>
 <body>
     <header>
@@ -19,3 +19,8 @@
             </ul>
         </nav>
     </header>
+    <section class="informacoes">
+        <h2>Nossa lojinha</h2>
+        <p>Sakura Card Captors é uma série de anime e mangá que segue a história de Sakura Kinomoto, <br> uma jovem que deve capturar cartas mágicas e restaurar a ordem no mundo. A série é conhecida por sua magia, aventuras e personagens encantadores Nossa loja .</p>
+        <img src="/imgs/sakura_info.jpg" alt="kero" class="info-img">
+    </section>
