--- a/index.html
+++ b/index.html
@@ -21,6 +21,30 @@
     </header>
     <section class="informacoes">
         <h2>Nossa lojinha</h2>
-        <p>Sakura Card Captors é uma série de anime e mangá que segue a história de Sakura Kinomoto, <br> uma jovem que deve capturar cartas mágicas e restaurar a ordem no mundo. A série é conhecida por sua magia, aventuras e personagens encantadores Nossa loja .</p>
+        <p>Sakura Card Captors é uma série de anime e mangá que segue a história de Sakura Kinomoto, <br> uma jovem que deve capturar cartas mágicas e restaurar a ordem no mundo. A série é conhecida por sua magia, aventuras e personagens encantadores. Nossa loja fornece qualquer informação, produto e meios para assistir essa obra tão aclamada pelo público mundial.</p>
         <img src="/imgs/sakura_info.jpg" alt="kero" class="info-img">
     </section>
+    <section class="localizacao">
+        <h2>Visite a nossa loja!</h2>
+        <address>
+            Sakura.com<br>
+            Rua da Flor, 666 - Bairro Tsukshima<br>
+            Xique-Xique, BA, 01234-567<br>
+            Brasil
+        </address>
+        <img src="/imgs/loja_frente.png" alt="Frente da loja" class="loja"> <img src="/imgs/loja_interior.png" alt="Interior da loja" class="loja"> 
+    </section>
+</main>
+
+<footer>
+    <p>&copy; 2024 Sakura.com. Todos os direitos reservados.</p>
+    <nav>
+        <ul>
+            <li><a href="https://www.instagram.com/sakura_cardcaptors_br/">Contato</a></li>
+            <li><a href="https://pt.shein.com/Terms-and-Conditions-a-399.html">Termos de Serviço</a></li>
+            <li><a href="https://help.shopee.com.br/portal/4/article/77068">Política de Privacidade</a></li>
+        </ul>
+    </nav>
+</footer>
+</body>
+</html>
