--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Inicial</title>
+    <title>SAKURA.COM</title>
     <link rel="stylesheet" href="/estilo.css">
 </head>
 <body>
     <header>
-     <div class="logo">
-        <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom" class="logo">
-        <h1>SAKURA.COM</h1>
+     <div class="logo-imagem">
+        <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom" class="logo-imagem">
+        <h1><strong>SAKURA.COM<strong></h1>
         <nav>
             <ul>
                 <li><a href="/Sakura.com/Produtos/index.html">Produtos</a></li>
@@ -22,7 +22,7 @@
     <section class="informacoes">
         <h2>Nossa lojinha</h2>
         <p>Sakura Card Captors é uma série de anime e mangá que segue a história de Sakura Kinomoto, <br> uma jovem que deve capturar cartas mágicas e restaurar a ordem no mundo. A série é conhecida por sua magia, aventuras e personagens encantadores. Nossa loja fornece qualquer informação, produto e meios para assistir essa obra tão aclamada pelo público mundial.</p>
-        <img src="/imgs/sakura_info.jpg" alt="kero" class="info-img">
+        <img src="/imgs/sakura_info.jpg" alt="kero" class="info-imagem">
     </section>
     <section class="localizacao">
         <h2>Visite a nossa loja!</h2>
