--- a/Sakura.com/Onde assistir/index.html
+++ b/Sakura.com/Onde assistir/index.html
@@ -20,3 +20,9 @@
             </ul>
         </nav>
     </header>
+
+    <footer>
+        <p>&copy; 2024 SAKURA.COM. Todos os direitos reservados.</p>
+    </footer>
+</body>
+</html>
