--- a/Sakura.com/Produtos/index.html
+++ b/Sakura.com/Produtos/index.html
@@ -21,4 +21,43 @@
         </nav>
     </header>
     <hr>
-    <h1>DESTAQUES DA SEMANA 
+    <main>
+        <section class="catalogo">
+            <h2>Catálogo de Produtos</h2>
+            <div class="produto">
+                <img src="/imgs/produto-1.png" alt="produto-1">
+                <h3>Coleção completa de mangás original Sakura CardCaptors</h3>
+                <p>e.</p>
+                <p><strong>Preço:</strong> R$ 450,00</p>
+            </div>
+            <div class="produto">
+                <img src="/imgs/produto-2.jpg" alt="produto-2">
+                <h3>Paleta temática</h3>
+                <p>e.</p>
+                <p><strong>Preço:</strong> R$ 120,00</p>
+            </div>
+            <div class="produto">
+                <img src="/imgs/produto-3.jpg" alt="produto-3">
+                <h3>Homemade gloss edição especial</h3>
+                <p>e.</p>
+                <p><strong>Preço:</strong> R$ 60,00</p>
+            </div>
+            <div class="produto">
+                <img src="/imgs/produto-4.jpg" alt="produto-4">
+                <h3>Báculo da Estrela</h3>
+                <p>Card Captor Sakura Star Magic Wand, Action Figure Anime, Kinomoto Sakura Cosplay Stick, Acessórios de Palco, Girl Props, 50cm</p>
+                <p><strong>Preço:</strong> R$ 250,00</p>
+            </div>
+            <div class="produto">
+                <img src="/imgs/produto-5.png" alt="produto-5">
+                <h3>Colar Báculo Sakura Aço Inox</h3>
+                <p>Card Captor Sakura Star Magic Wand, Action Figure Anime, Kinomoto Sakura Cosplay Stick, Acessórios de Palco, Girl Props, 50cm</p>
+                <p><strong>Preço:</strong> R$ 100,00</p>
+            <div class="produto">
+                <img src="/imgs/produto-6.jpg" alt="produto-6">
+                <h3>Coleção de cartas mágicas do Mago Clow</h3>
+                <p>Card Captor Sakura Star Magic Wand, Action Figure Anime, Kinomoto Sakura Cosplay Stick, Acessórios de Palco, Girl Props, 50cm</p>
+                <p><strong>Preço:</strong> R$ 320,00</p>
+
+        </section>
+    </main>
