--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </main>
 
 <footer>
-    <p>&copy; 2024 Sakura.com. Todos os direitos reservados.</p>
+    <p>&copy; 2024 SAKURA.COM. Todos os direitos reservados.</p>
     <nav>
         <ul>
             <li><a href="https://www.instagram.com/sakura_cardcaptors_br/">Contato</a></li>
