--- a/Sakura.com/Produtos/index.html
+++ b/Sakura.com/Produtos/index.html
@@ -22,14 +22,13 @@
     </header>
     <hr>
     <main>
-        <!-- Introdução -->
+    
         <section class="introducao">
-            <p>Bem-vindo à SAKURA.COM, onde você encontra produtos originais inspirados na mágica série Cardcaptor Sakura. Todos os nossos produtos são fabricados com qualidade e atenção aos detalhes, para oferecer a melhor experiência aos fãs. Explore nossa coleção exclusiva e descubra o mundo de Sakura com itens que vão desde coleções completas de mangás até acessórios icônicos.</p>
+            <p>Bem-vindo à SAKURA.COM, onde você encontra produtos originais inspirados na mágica série Cardcaptor Sakura. Todos os nossos produtos são fabricados com qualidade e atenção aos detalhes, para oferecer a melhor experiência aos fãs. Explore nossa coleção exclusiva e descubra o mundo de Sakura com itens que vão desde coleções completas de mangás até acessórios icônicos.</p> <img src="/imgs/gig-produtos.gif" alt="gif">  
         </section>
 
-        <!-- Catálogo de Produtos -->
         <section class="catalogo">
-            <h2>Catálogo de Produtos</h2>
+            <h2>NOSSOS PRINCIPAIS PRODUTOS</h2>
             <div class="produto">
                 <img src="/imgs/produto-1.png" alt="Coleção completa de mangás original Sakura CardCaptors">
                 <h3>Coleção completa de mangás original Sakura CardCaptors</h3>
@@ -40,31 +39,31 @@
                 <img src="/imgs/produto-2.jpg" alt="Paleta temática">
                 <h3>Paleta temática</h3>
                 <p>Uma paleta de cores exclusiva inspirada nos encantos de Sakura, perfeita para criar looks mágicos e elegantes.</p>
-                <p><strong>Preço:</strong> R$ 120,00</p>
+                <strong><p>R$ 120,00</p></strong>
             </div>
             <div class="produto">
                 <img src="/imgs/produto-3.jpg" alt="Homemade gloss edição especial">
                 <h3>Homemade gloss edição especial</h3>
                 <p>Gloss labial com fórmula hidratante, em uma edição especial que traz o brilho e a magia de Sakura para seu dia a dia.</p>
-                <p><strong>Preço:</strong> R$ 60,00</p>
+                <strong><p>R$ 60,00</p></strong>
             </div>
             <div class="produto">
                 <img src="/imgs/produto-4.jpg" alt="Báculo da Estrela">
                 <h3>Báculo da Estrela</h3>
                 <p>Báculo da Estrela, perfeito para cosplay e decoração. Uma réplica detalhada que captura a essência mágica da série.</p>
-                <p><strong>Preço:</strong> R$ 250,00</p>
+                <strong><p>R$ 250,00</p></strong>
             </div>
             <div class="produto">
                 <img src="/imgs/produto-5.png" alt="Colar Báculo Sakura Aço Inox">
                 <h3>Colar Báculo Sakura Aço Inox</h3>
                 <p>Um elegante colar de aço inox com pingente do Báculo Sakura, ideal para mostrar seu amor pela série de forma sutil e estilosa.</p>
-                <p><strong>Preço:</strong> R$ 100,00</p>
+                <strong><p>R$ 180,00</p></strong>
             </div>
             <div class="produto">
                 <img src="/imgs/produto-6.jpg" alt="Coleção de cartas mágicas do Mago Clow">
                 <h3>Coleção de cartas mágicas do Mago Clow</h3>
                 <p>Réplica das cartas mágicas do Mago Clow, um item indispensável para qualquer fã de Cardcaptor Sakura. Ideal para colecionar ou usar em cosplay.</p>
-                <p><strong>Preço:</strong> R$ 320,00</p>
+                <strong><p>R$ 280,00</p></strong>
             </div>
         </section>
     </main>
