--- a/Sakura.com/Onde assistir/index.html
+++ b/Sakura.com/Onde assistir/index.html
@@ -20,7 +20,18 @@
             </ul>
         </nav>
     </header>
-    
+    <section class="onde-assistir">
+        <h2>ONDE ASSISTIR?</h2>
+        <div class="streaming">
+            <a href="https://www.crunchyroll.com/pt-br/series/GRNQP873R/cardcaptor-sakura?srsltid=AfmBOoo6IE5LItpespQvZ5gdmipn_2IH4VZTglH35AkNZo0ARliuM6LL" target="_blank">
+                <img src="/imgs/Crunchyroll-Symbol.png" alt="Crunchyroll" class="streaming-logo">
+                <p>WATCH ON CRUNCHYROLL</p>
+            </a>
+            <div class="streaming">
+                <a href="https://www.crunchyroll.com/pt-br/series/GRNQP873R/cardcaptor-sakura?srsltid=AfmBOoo6IE5LItpespQvZ5gdmipn_2IH4VZTglH35AkNZo0ARliuM6LL" target="_blank">
+                    <img src="/imgs/Crunchyroll-Symbol.png" alt="Crunchyroll" class="streaming-logo">
+                    <p>WATCH ON CRUNCHYROLL</p>
+                </a>
     <footer>
         <p>&copy; 2024 SAKURA.COM. Todos os direitos reservados.</p>
     </footer>
