--- a/Sakura.com/Onde assistir/index.html
+++ b/Sakura.com/Onde assistir/index.html
@@ -8,17 +8,16 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom" class="logo">
-            <h1>SAKURA.COM</h1>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="/index.html">Página Inicial</a></li>
-                <li><a href="/Sakura.com/Wiki/index.html">Wiki</a></li>
-                <li><a href="/Sakura.com/Onde assistir/index.html">Onde Assistir</a></li>
-            </ul>
-        </nav>
+        <div class="logo-imagem">
+            <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom" class="logo-imagem">
+            <h1><strong>SAKURA.COM<strong></h1>
+            <nav>
+                <ul>
+                    <li><a href="/Sakura.com/Produtos/index.html">Produtos</a></li>
+                    <li><a href="/Sakura.com/Wiki/index.html">Wiki</a></li>
+                    <li><a href="/index.html">Página Inicial</a></li>
+                </ul>
+            </nav>
     </header>
     <section class="onde-assistir">
         <h2>ONDE ASSISTIR?</h2>
@@ -28,10 +27,15 @@
                 <p>WATCH ON CRUNCHYROLL</p>
             </a>
             <div class="streaming">
-                <a href="https://www.crunchyroll.com/pt-br/series/GRNQP873R/cardcaptor-sakura?srsltid=AfmBOoo6IE5LItpespQvZ5gdmipn_2IH4VZTglH35AkNZo0ARliuM6LL" target="_blank">
-                    <img src="/imgs/Crunchyroll-Symbol.png" alt="Crunchyroll" class="streaming-logo">
-                    <p>WATCH ON CRUNCHYROLL</p>
-                </a>
+            <a href="https://tv.apple.com/us/show/cardcaptor-sakura/umc.cmc.55qy45fdofrfuiugk7lkt184e" target="_blank">
+                <img src="/imgs/apple-tv-logo-DC5D65EEFE-seeklogo.com.png" alt="Apple TV" class="streaming-logo">
+                <p>WATCH ON APPLE TV</p>
+            </a>
+            <div class="streaming">
+            <a href="https://www.primevideo.com/-/pt_PT/detail/Cardcaptor-Sakura/0G0Y45NVSUWYV1KU5LLJ6DZQCC" target="_blank">
+                <img src="/imgs/primevideo.png" alt="Prime Video" class="streaming-logo">
+                <p>WATCH ON PRIME VIDEO</p>
+            </a>
     <footer>
         <p>&copy; 2024 SAKURA.COM. Todos os direitos reservados.</p>
     </footer>
