--- a/Sakura.com/Wiki/index.html
+++ b/Sakura.com/Wiki/index.html
@@ -26,8 +26,8 @@
             <h3>Criadoras</h3>
             <p><strong>CLAMP</strong> é um grupo de mangakás japonês que criou Sakura Card Captors. O grupo é composto por quatro integrantes:<br> Satsuki Igarashi, Ageha Ohkawa, Tsubaki Nekoi e Mokona. Elas são conhecidas por criar várias obras populares e influentes no gênero shoujo e são muito respeitadas na indústria de mangás e animes.</p>
             <ul>
-                <li><strong>Satsuki Igarashi</strong> - Design e ilustração.</li>
-                <li><strong>Ageha Ohkawa</strong> - Roteiro e enredo.</li>
-                <li><strong>Tsubaki Nekoi</strong> - Design e ilustração.</li>
-                <li><strong>Mokona</strong> - Design de personagens e elementos mágicos.</li>
+                <img src="/imgs/Satsuki_Igarashi.jpg" alt="Satsuki Igarashi"><li><strong>Satsuki Igarashi</strong> - Design e ilustração.</li>
+                <img src="/imgs/Nanase_Ohkawa.jpg" alt="Ageha Ohkawa"><li><strong>Ageha Ohkawa</strong> - Roteiro e enredo.</li>
+                <img src="/imgs/Tsubaki_Nekoi.jpg" alt="Tsubaki Nekoi"><li><strong>Tsubaki Nekoi</strong> - Design e ilustração.</li>
+                <img src="/imgs/Mokona.jpg" alt="Mokona"><li><strong>Mokona</strong> - Design de personagens e elementos mágicos.</li>
             </ul>
