--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/imgs/logo_sakuracom.png" type="image/png">
     <title>SAKURA.COM</title>
     <link rel="stylesheet" href="/estilo.css">
 </head>
@@ -20,12 +21,12 @@
         </nav>
     </header>
     <section class="informacoes">
-        <h2>Nossa lojinha</h2>
+        <h2>NOSSA STORE</h2>
         <p>Sakura Card Captors é uma série de anime e mangá que segue a história de Sakura Kinomoto, <br> uma jovem que deve capturar cartas mágicas e restaurar a ordem no mundo. A série é conhecida por sua magia, aventuras e personagens encantadores. Nossa loja fornece qualquer informação, produto e meios para assistir essa obra tão aclamada pelo público mundial.</p>
         <img src="/imgs/sakura_info.jpg" alt="kero" class="info-imagem">
     </section>
     <section class="localizacao">
-        <h2>Visite a nossa loja!</h2>
+        <h2>VISITE A NOSSA LOJA!</h2>
         <address>
             Sakura.com<br>
             Rua da Flor, 666 - Bairro Tsukshima<br>
