--- a/Sakura.com/Wiki/index.html
+++ b/Sakura.com/Wiki/index.html
@@ -22,12 +22,67 @@
     </header>
     <main>
         <h2>Sobre Sakura Card Captors</h2>
+
         <section id="criadoras">
-            <h3>Criadoras</h3>
-            <p><strong>CLAMP</strong> é um grupo de mangakás japonês que criou Sakura Card Captors. O grupo é composto por quatro integrantes:<br> Satsuki Igarashi, Ageha Ohkawa, Tsubaki Nekoi e Mokona. Elas são conhecidas por criar várias obras populares e influentes no gênero shoujo e são muito respeitadas na indústria de mangás e animes.</p>
+            <h3>CRIADORAS</h3>
+            <p><strong>CLAMP</strong> é um grupo de mangakás japonês que criou Sakura Card Captors. O grupo é composto por quatro integrantes: Satsuki Igarashi, Ageha Ohkawa, Tsubaki Nekoi e Mokona. Elas são conhecidas por criar várias obras populares e influentes no gênero shoujo e são muito respeitadas na indústria de mangás e animes.</p>
             <ul>
-                <img src="/imgs/Satsuki_Igarashi.jpg" alt="Satsuki Igarashi"><li><strong>Satsuki Igarashi</strong> - Design e ilustração.</li>
-                <img src="/imgs/Nanase_Ohkawa.jpg" alt="Ageha Ohkawa"><li><strong>Ageha Ohkawa</strong> - Roteiro e enredo.</li>
-                <img src="/imgs/Tsubaki_Nekoi.jpg" alt="Tsubaki Nekoi"><li><strong>Tsubaki Nekoi</strong> - Design e ilustração.</li>
-                <img src="/imgs/Mokona.jpg" alt="Mokona"><li><strong>Mokona</strong> - Design de personagens e elementos mágicos.</li>
+                <img src="/imgs/header_wiki.png" alt="header" class="header">
+                <li><img src="/imgs/Satsuki_Igarashi.jpg" alt="Satsuki Igarashi"><strong>Satsuki Igarashi</strong> - Design e ilustração.</li>
+                <li><img src="/imgs/Nanase_Ohkawa.jpg" alt="Ageha Ohkawa"><strong>Ageha Ohkawa</strong> - Roteiro e enredo.</li>
+                <li><img src="/imgs/Tsubaki_Nekoi.jpg" alt="Tsubaki Nekoi"><strong>Tsubaki Nekoi</strong> - Design e ilustração.</li>
+                <li><img src="/imgs/Mokona.jpg" alt="Mokona"><strong>Mokona</strong> - Design de personagens e elementos mágicos.</li>
             </ul>
+        </section>
+
+        <section id="personagens-principais">
+            <h3>PERSONAGENS PRINCIPAIS</h3>
+
+            <div class="personagem">
+                <h4>Sakura Kinomoto</h4>
+                <img src="/imgs/sakura-kinomoto.png" alt="Sakura Kinomoto">
+                <p>Sakura Kinomoto é a protagonista da série. Uma jovem de 10 anos que acidentalmente libera as cartas Clow e deve capturá-las para impedir que causem desastres. Com seu Báculo Mágico e a ajuda de seus amigos, Sakura enfrenta diversos desafios ao longo da série.</p>
+            </div>
+
+            <div class="personagem">
+                <h4>Tomoyo Daidouji</h4>
+                <img src="/imgs/tomoyo-daidouji.webp" alt="Tomoyo Daidouji">
+                <p>Tomoyo é a melhor amiga de Sakura e sua prima distante. Ela é uma garota doce e gentil que adora filmar Sakura em ação, criando seus trajes de batalha personalizados. Tomoyo apoia Sakura em todas as suas aventuras.</p>
+            </div>
+
+            <div class="personagem">
+                <h4>Kerberos (Kero)</h4>
+                <img src="/imgs/kerberos-kero.png" alt="Kerberos (Kero)">
+                <p>Kero é o guardião das cartas Clow e guia Sakura na sua missão de capturá-las. Apesar de sua forma pequena e fofa, ele possui uma verdadeira forma poderosa. Ele tem uma personalidade forte e é um grande fã de comida.</p>
+            </div>
+
+            <div class="personagem">
+                <h4>Syaoran Li</h4>
+                <img src="/imgs/syaoran-li.webp" alt="Syaoran Li">
+                <p>Syaoran é um descendente de Clow Reed, o criador das cartas Clow, e inicialmente é rival de Sakura na captura das cartas. Com o tempo, ele se torna um aliado importante e desenvolve sentimentos por Sakura.</p>
+            </div>
+
+            <div class="personagem">
+                <h4>Yukito Tsukishiro / Yue</h4>
+                <img src="/imgs/yukito-yue.webp" alt="Yukito Tsukishiro / Yue">
+                <p>Yukito é o melhor amigo de Touya, irmão de Sakura, e o interesse amoroso de Sakura no início da série. No entanto, ele tem uma outra identidade como Yue, o segundo guardião das cartas Clow, encarregado de julgar o novo mestre das cartas.</p>
+            </div>
+
+            <div class="personagem">
+                <h4>Touya Kinomoto</h4>
+                <img src="/imgs/touya.webp" alt="Touya Kinomoto">
+                <p>Touya é o irmão mais velho de Sakura. Ele é protetor e, embora goste de provocar Sakura, sempre está lá para ajudá-la. Ele tem habilidades sobrenaturais e pode sentir a presença de espíritos e auras, o que o torna ciente das aventuras mágicas de Sakura.</p>
+            </div>
+
+            <div class="personagem">
+                <h4>Meiling Li</h4>
+                <img src="/imgs/Meiling_Li_Render.webp" alt="Meiling Li">
+                <p>Meiling é prima de Syaoran e tem uma personalidade forte e determinada. Ela chega a se envolver na captura das cartas Clow, mesmo sem possuir poderes mágicos. Inicialmente, ela vê Sakura como rival, mas eventualmente se torna amiga e aliada.</p>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 SAKURA.COM. Todos os direitos reservados.</p>
+    </footer>
+</body>
+</html>
