--- a/Sakura.com/Produtos/index.html
+++ b/Sakura.com/Produtos/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/imgs/logo_sakuracom.png" type="image/png">
     <title>SAKURA.COM - Produtos</title>
     <link rel="stylesheet" href="/estilo.css">
 </head>
