--- a/Sakura.com/Onde assistir/index.html
+++ b/Sakura.com/Onde assistir/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/imgs/logo_sakuracom.png" type="image/png">
     <title>SAKURA.COM - Onde assistir</title>
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="/css/estilo.css">
 </head>
 <body>
     <header>
@@ -24,7 +24,7 @@
         <h2>ONDE ASSISTIR?</h2>
         <div class="streaming">
             <a href="https://www.crunchyroll.com/pt-br/series/GRNQP873R/cardcaptor-sakura?srsltid=AfmBOoo6IE5LItpespQvZ5gdmipn_2IH4VZTglH35AkNZo0ARliuM6LL" target="_blank">
-                <img src="/imgs/Crunchyroll-Symbol.png" alt="Crunchyroll" class="streaming-logo">
+                <img src="/imgs/Crunchyroll-Symbol.png" width= "500" alt= "Crunchyroll" class="streaming-logo">
                 <p>WATCH ON CRUNCHYROLL</p>
             </a>
             <div class="streaming">
@@ -34,7 +34,7 @@
             </a>
             <div class="streaming">
             <a href="https://www.primevideo.com/-/pt_PT/detail/Cardcaptor-Sakura/0G0Y45NVSUWYV1KU5LLJ6DZQCC" target="_blank">
-                <img src="/imgs/primevideo.png" alt="Prime Video" class="streaming-logo">
+                <img src="/imgs/primevideo.png"width = "400" alt="Prime Video" class="streaming-logo">
                 <p>WATCH ON PRIME VIDEO</p>
             </a>
     <footer>
