--- a/Sakura.com/Produtos/index.html
+++ b/Sakura.com/Produtos/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/imgs/logo_sakuracom.png" type="image/png">
     <title>SAKURA.COM - Produtos</title>
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="/css/estilo.css">
 </head>
 <body>
     <header>
@@ -21,11 +21,9 @@
             </ul>
         </nav>
     </header>
-    <hr>
     <main>
-    
         <section class="introducao">
-            <p>Bem-vindo à SAKURA.COM, onde você encontra produtos originais inspirados na mágica série Cardcaptor Sakura. Todos os nossos produtos são fabricados com qualidade e atenção aos detalhes, para oferecer a melhor experiência aos fãs. Explore nossa coleção exclusiva e descubra o mundo de Sakura com itens que vão desde coleções completas de mangás até acessórios icônicos.</p> <img src="/imgs/gig-produtos.gif" alt="gif">  
+            <p>Bem-vindo à SAKURA.COM, onde você encontra produtos originais inspirados na mágica série Cardcaptor Sakura. Todos os nossos produtos são fabricados com qualidade e atenção aos detalhes, para oferecer a melhor experiência aos fãs. Explore nossa coleção exclusiva e descubra o mundo de Sakura com itens que vão desde coleções completas de mangás até acessórios icônicos.</p> 
         </section>
 
         <section class="catalogo">
