--- a/Sakura.com/Wiki/index.html
+++ b/Sakura.com/Wiki/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/imgs/logo_sakuracom.png" type="image/png">
     <title>SAKURA.COM - Wiki</title>
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="/css/estilo.css">
 </head>
 <body>
     <header>
@@ -30,7 +30,7 @@
                 <li><img src="/imgs/Satsuki_Igarashi.jpg" alt="Satsuki Igarashi"><strong>Satsuki Igarashi</strong> - Design e ilustração.</li>
                 <li><img src="/imgs/Nanase_Ohkawa.jpg" alt="Ageha Ohkawa"><strong>Ageha Ohkawa</strong> - Roteiro e enredo.</li>
                 <li><img src="/imgs/Tsubaki_Nekoi.jpg" alt="Tsubaki Nekoi"><strong>Tsubaki Nekoi</strong> - Design e ilustração.</li>
-                <li><img src="/imgs/Mokona.jpg" alt="Mokona"><strong>Mokona</strong> - Design de personagens e elementos mágicos.</li>
+                <li><img src="/imgs/Mokona.jpg" alt="Mokona"><strong>Mokona</strong> - Design de personagens<br> e elementos mágicos.</li>
             </ul>
         </section>
 
