--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <h1><strong>SAKURA.COM<strong></h1>
         <nav>
             <ul>
-                <li><a href="/Sakura.com/Produtos/index.html">Produtos</a></li>
-                <li><a href="/Sakura.com/Wiki/index.html">Wiki</a></li>
-                <li><a href="/Sakura.com/Onde assistir/index.html">Onde Assistir</a></li>
+                <li><a href="/Sakura.com/Produtos/index.html">PRODUTOS</a></li>
+                <li><a href="/Sakura.com/Wiki/index.html">WIKI</a></li>
+                <li><a href="/Sakura.com/Onde assistir/index.html">ONDE ASSISTIR</a></li>
             </ul>
         </nav>
     </header>
     <section class="informacoes">
-        <h2>NOSSA STORE</h2>
+        <h2>O QUE FAZEMOS</h2>
         <p>Sakura Card Captors é uma série de anime e mangá que segue a história de Sakura Kinomoto, <br> uma jovem que deve capturar cartas mágicas e restaurar a ordem no mundo. A série é conhecida por sua magia, aventuras e personagens encantadores. Nossa loja fornece qualquer informação, produto e meios para assistir essa obra tão aclamada pelo público mundial.</p>
         <img src="/imgs/sakura_info.jpg" alt="kero" class="info-imagem">
     </section>
