--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
         </nav>
     </header>
     <section class="informacoes">
-        <h2>O QUE FAZEMOS</h2>
-        <p>Sakura Card Captors é uma série de anime e mangá que segue a história de Sakura Kinomoto, <br> uma jovem que deve capturar cartas mágicas e restaurar a ordem no mundo. A série é conhecida por sua magia, aventuras e personagens encantadores. Nossa loja fornece qualquer informação, produto e meios para assistir essa obra tão aclamada pelo público mundial.</p>
-        <img src="/imgs/sakura_info.jpg" alt="kero" class="info-imagem">
+        <img src="/imgs/sakura_info.jpg" alt="kero" width="200" class="info-imagem"><h2>O QUE FAZEMOS</h2>
+        <p>Sakura Card Captors é uma série de anime e mangá que segue a história de Sakura Kinomoto, <br> uma jovem que deve capturar cartas mágicas e restaurar a ordem no mundo.<br> A série é conhecida por sua magia, aventuras e personagens encantadores. Nossa loja fornece qualquer informação, produto e meios <br>para assistir essa obra tão aclamada pelo público mundial.</p>
     </section>
     <section class="localizacao">
         <h2>VISITE A NOSSA LOJA!</h2>
@@ -33,7 +32,7 @@
             Xique-Xique, BA, 01234-567<br>
             Brasil
         </address>
-        <img src="/imgs/loja_frente.png" alt="Frente da loja" class="loja"> <img src="/imgs/loja_interior.png" alt="Interior da loja" class="loja"> 
+        <img src="/imgs/loja_frente.png" width="300" alt="Frente da loja" class="loja"> <img src="/imgs/loja_interior.png"width="300" alt="Interior da loja" class="loja"> 
     </section>
 </main>
 
