--- a/Sakura.com/Produtos/index.html
+++ b/Sakura.com/Produtos/index.html
@@ -15,9 +15,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="/index.html">Página Inicial</a></li>
-                <li><a href="/Sakura.com/Wiki/index.html">Wiki</a></li>
-                <li><a href="/Sakura.com/Onde assistir/index.html">Onde Assistir</a></li>
+                <li><a href="/index.html">PÁGINA INICIAL</a></li>
+                <li><a href="/Sakura.com/Wiki/index.html">WIKI</a></li>
+                <li><a href="/Sakura.com/Onde assistir/index.html">ONDE ASSISTIR</a></li>
             </ul>
         </nav>
     </header>
