--- a/Sakura.com/Wiki/index.html
+++ b/Sakura.com/Wiki/index.html
@@ -16,9 +16,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="/index.html">Página Inicial</a></li>
-                <li><a href="/Sakura.com/Produtos/index.html">Produtos</a></li>
-                <li><a href="/Sakura.com/Onde assistir/index.html">Onde Assistir</a></li>
+                <li><a href="/index.html">PÁGINA INICIAL</a></li>
+                <li><a href="/Sakura.com/Produtos/index.html">PRODUTOS</a></li>
+                <li><a href="/Sakura.com/Onde assistir/index.html">ONDE ASSISTIR</a></li>
             </ul>
         </nav>
     </header>
@@ -39,7 +39,7 @@
 
             <div class="personagem">
                 <h4>Sakura Kinomoto</h4>
-                <img src="/imgs/sakura-kinomoto.png" alt="Sakura Kinomoto">
+                <img src="/imgs/sakura_kinomoto.webp" alt="Sakura Kinomoto">
                 <p>Sakura Kinomoto é a protagonista da série. Uma jovem de 10 anos que acidentalmente libera as cartas Clow e deve capturá-las para impedir que causem desastres. Com seu Báculo Mágico e a ajuda de seus amigos, Sakura enfrenta diversos desafios ao longo da série.</p>
             </div>
 
@@ -69,7 +69,7 @@
 
             <div class="personagem">
                 <h4>Touya Kinomoto</h4>
-                <img src="/imgs/touya.webp" alt="Touya Kinomoto">
+                <img src="/imgs/af9a29abcf36d5dde83a84a26761b6c6-removebg-preview.png" alt="Touya Kinomoto">
                 <p>Touya é o irmão mais velho de Sakura. Ele é protetor e, embora goste de provocar Sakura, sempre está lá para ajudá-la. Ele tem habilidades sobrenaturais e pode sentir a presença de espíritos e auras, o que o torna ciente das aventuras mágicas de Sakura.</p>
             </div>
 
