--- a/Sakura.com/Onde assistir/index.html
+++ b/Sakura.com/Onde assistir/index.html
@@ -14,9 +14,9 @@
             <h1><strong>SAKURA.COM<strong></h1>
             <nav>
                 <ul>
-                    <li><a href="/Sakura.com/Produtos/index.html">Produtos</a></li>
-                    <li><a href="/Sakura.com/Wiki/index.html">Wiki</a></li>
-                    <li><a href="/index.html">Página Inicial</a></li>
+                    <li><a href="/Sakura.com/Produtos/index.html">PRODUTOS</a></li>
+                    <li><a href="/Sakura.com/Wiki/index.html">WIKI</a></li>
+                    <li><a href="/index.html">PÁGINA INICIAL</a></li>
                 </ul>
             </nav>
     </header>
